--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -1,13 +1,13 @@
 ###
 # Unity folders and files
 ###
-[Aa]ssets/AssetStoreTools*
-[Bb]uild/
-[Ll]ibrary/
-[Ll]ocal[Cc]ache/
-[Oo]bj/
-[Tt]emp/
-[Uu]nityGenerated/
+Project-A/[Aa]ssets/AssetStoreTools*
+Project-A/[Bb]uild/
+Project-A/[Ll]ibrary/
+Project-A/[Ll]ocal[Cc]ache/
+Project-A/[Oo]bj/
+Project-A/[Tt]emp/
+Project-A/[Uu]nityGenerated/
 # file on crash reports
 sysinfo.txt
 # Unity3D generated meta files
@@ -39,3 +39,4 @@ sysinfo.txt
 Icon?
 ehthumbs.db
 Thumbs.db
+UnityLockfile
