Started work on movement

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ ehthumbs.db
 Thumbs.db
 UnityLockfile
 Library/assetDatabase3
+Library/CurrentLayout.dwlt
+Library/LastSceneManagerSetup.txt
+Library/shadercompiler-UnityShaderCompiler.exe0.log
